# defender

./: .gitignore
software/: CMakeLists.txt
software/app/: CMakeLists.txt
software/app/src/: CMakeLists.txt  baseline_alerts.c  baseline_alerts.h  fcc_table.c  fcc_table.csv  fcc_table.h  utilities.c  utilities.h
software/data/: signals.txt
